--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul class="main-nav">
                 <li><a href="#articles">Articles</a></li>
                 <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#feauters">Feauters</a></li>
+                <li><a href="#features">Feauters</a></li>
                 <li>
                     <a href="#">Other Links</a>
 
