--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
           <div class="box">
             <img src="./images/avatar (1).png" alt="">
             <h3>Mohamed Elhadidy</h3>
-            <span class="title">Translator (علي ما تفرج)</span>
+            <span class="title"> Full Stack Web Developer</span>
             <div class="rate">
               <i class="filled fas fa-star"></i>
               <i class="filled fas fa-star"></i>
@@ -324,7 +324,7 @@
           <div class="box">
             <img src="./images/avatar (1).png" alt="">
             <h3>Ibrahim Yasser</h3>
-            <span class="title">Full stack web Developer</span>
+            <span class="title">Full Stack Web Developer</span>
             <div class="rate">
               <i class="filled fas fa-star"></i>
               <i class="filled fas fa-star"></i>
@@ -354,7 +354,7 @@
           <div class="box">
             <img src="./images/avatar (1).png" alt="">
             <h3>Saleh Hegazy</h3>
-            <span class="title">Translator (ABC مش حافظ)</span>
+            <span class="title">Translator</span>
             <div class="rate">
               <i class="filled fas fa-star"></i>
               <i class="filled fas fa-star"></i>
