edit some features and add js file

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
 
     <!-- Start Work Steps -->
     <div class="work-steps" id="work-steps">
-      <h2 class="main-title">How It Works ?</h2>
+      <h2 class="main-title">How It Works</h2>
       <div class="container">
         <img src="./images/stepwork.jpg" alt="" class="image"/>
         <div class="info">
@@ -882,5 +882,10 @@
       <p class="copyright">&#9400; Made  &#x2661; By Islam Hafez </p>
     </div>
     <!-- End Footer  -->
+    <div class="scrollup" id="scroll-up">
+      <i class="fa-solid fa-arrow-up"></i>
+    </div>
+
+    <script src="javascript/script.js"></script>
   </body>
 </html>
