--- a/index.html
+++ b/index.html
@@ -564,28 +564,28 @@
           <div class="skill">
             <h3>HTML <span>95%</span></h3>
             <div class="the-progress">
-              <span style="width: 95%;"></span>
+              <span style="width: 0;"  data-width="95%"></span>
             </div>
           </div>
 
           <div class="skill">
             <h3>CSS<span>90%</span></h3>
             <div class="the-progress">
-              <span style="width: 90%;"></span>
+              <span style="width: 0;" data-width="90%"></span>
             </div>
           </div>
 
           <div class="skill">
             <h3>Java Script<span>80%</span></h3>
             <div class="the-progress">
-              <span style="width: 80%;"></span>
+              <span style="width: 0;" data-width="80%"></span>
             </div>
           </div>
 
           <div class="skill">
             <h3>Python<span>70%</span></h3>
             <div class="the-progress">
-              <span style="width: 70%;"></span>
+              <span style="width: 0;" data-width="70%"></span>
             </div>
           </div>
         </div>
@@ -642,23 +642,23 @@
         <div class="info">
           <div class="time">
             <div class="unit">
-              <span>15</span>
+              <span class="days">15</span>
               <span>Days</span>
             </div>
             <div class="unit">
-              <span>08</span>
+              <span class="hours">08</span>
               <span>Hours</span>
             </div>
             <div class="unit">
-              <span>45</span>
+              <span class="minutes">45</span>
               <span>Minutes</span>
             </div>
             <div class="unit">
-              <span>55</span>
+              <span class="seconds">55</span>
               <span>Seconds</span>
             </div>
           </div>
-          <h2 class="title">Teach Masters Event 2022</h2>
+          <h2 class="title">Teach Masters Event 2024</h2>
           <p class="description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum obcaecati assumenda qui impedit atque necessitatibus saepe consectetur aliquid nisi inventore commodi facilis,
           </p>
@@ -768,22 +768,22 @@
       <div class="container">
         <div class="box">
           <i class="far fa-user fa-2x fa-fw"></i>
-          <span class="number">300</span>
+          <span class="number" data-goal="900">0</span>
           <span class="text">Clients</span>
         </div>
         <div class="box">
           <i class="fas fa-code fa-2x fa-fw"></i>
-          <span class="number">400</span>
+          <span class="number" data-goal="1200">0</span>
           <span class="text">Projects</span>
         </div>
         <div class="box">
           <i class="fas fa-globe-asia fa-2x fa-fw"></i>
-          <span class="number">12</span>
+          <span class="number" data-goal="980">0</span>
           <span class="text">Countries</span>
         </div>
         <div class="box">
           <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
-          <span class="number">500K</span>
+          <span class="number" data-goal="1400">0</span>
           <span class="text">Money</span>
         </div>
       </div>      
